# gigwise-analytics

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-dbt-docs.yml
bruin/: README.md
bruin/assets/ingestion/: run_dlt_ingestion.py
bruin/assets/quality/: check_event_dates.sql
bruin/assets/transformation/: run_dbt_build.py  run_spark_enrichment.py
bruin_pipeline/: pipeline.yml
bruin_pipeline/assets/ingestion/: run_dlt_ingestion.py
bruin_pipeline/assets/staging/: stg_concerts_union.sql
dashboard/: streamlit_app.py
dbt/: README.md  dbt_project.yml
dbt/docs/: catalog.json  manifest.json
dbt/models/: _exposures.yml  sources.yml
dbt/models/core/: dim_artist.sql  fact_concert.sql  (+1 more)
dbt/tests/: assert_valid_artist_types_only.sql
dbt_concert/: profiles.yml
dbt_concert/models/: sources.yml
dbt_concert/tests/: assert_concert_date_not_future.sql  assert_popularity_range.sql
dlt/: README.md  ingest_pipeline.py
dlt_pipeline/: README.md  ingest_pipeline.py
docs/: README.md  design_choices.md  future_opportunities.md  project_context_and_objective.md  user_guide.md
kafka/: consumer.py  producer.py
kestra/flows/: concert_pipeline_daily.yml
spark_jobs/: compute_artist_similarity.py  run_standalone.py
streamlit/: export_data.py  streamlit_app.py
streamlit/data/: date_range.parquet  freshness.parquet  live_events.parquet  meta.json  repertoire.parquet  similarity.parquet  touring_intensity.parquet
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
(+19 files in other folders)
